fix avatar and pdf missing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col">
             <div class="authorship">
-              <img class="author_heaed" src="../images/head2.jpg" alt="Avatar" style="width:100px; border-radius: 50%; object-fit: cover;">
+              <img class="author_heaed" src="assets/images/rueiche.jpg" alt="Avatar" style="width:100px; border-radius: 50%; object-fit: cover;">
               <br><span style="margin: auto; font-weight: 700;"> <a href="https://rueichechang.github.io/">Ruei-Che Chang</a></span>
               <br><span style="margin: auto;">University of Michigan</span>
             </div>
@@ -113,7 +113,7 @@
       <div style="display:flex; justify-content:center">
         <div style="text-align: center;">
           <!-- <img src="assets/images/cover.png" alt="" style="border:1px black solid;height:300px; width:auto; margin-left: 30px;"> -->
-          <a href="../pdf/omniscribe.pdf" style="margin-left: 1px;">
+          <a href="assets/pdf/omniscribe.pdf" style="margin-left: 1px;">
             <img src="assets/images/cover.png" alt="" style="border:1px black solid;height:200px; width:auto; margin-left: 0px;">
             <br>
             <span style="font-size: 12px;">Click to view/download</span> 
