--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             </div>
 
             <div class="authorship">
-              <img class="author_heaed" src="../images/head2.jpg" alt="Avatar" style="width:100px; border-radius: 50%;">
+              <img class="author_heaed" src="assets/images/chao.jpg" alt="Avatar" style="width:100px; height:100px; border-radius: 50%; object-fit: cover;">
               <br><span style="margin: auto; font-weight: 700;">Yu-Tzu Chao</span>
-              <br><span style="margin: auto;">Taiwan Audio Description Development Association</span>
+              <br><span style="margin: auto;"> <a href="https://www.dvs.org.tw/">Taiwan Audio Description Development Association</a></span>
             </div>
 
           </div>
