--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="authorship">
               <img class="author_heaed" src="assets/images/chao.jpg" alt="Avatar" style="width:100px; height:100px; border-radius: 50%; object-fit: cover;">
               <br><span style="margin: auto; font-weight: 700;">Yu-Tzu Chao</span>
-              <br><span style="margin: auto;"> <a href="https://www.dvs.org.tw/">Taiwan Audio Description Development Association</a></span>
+              <br><span style="margin: auto;"> <a href="https://www.dvs.org.tw/" target="_blank">Taiwan Audio Description Development Association</a></span>
             </div>
 
           </div>
