--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </span>
         </div>
         <div style="width: 40%; height: auto;  float: right;" >
-          <img src="assets/images/ob_overlay.jpg" style="width:100%; height: 100%; margin-top: 10px;" alt="This figure demonstrates the mobile prototype. Using a headphone and a smartphone, BVI users, the woman in this picture, can acquire the object descriptions by orienting themselves to the anchored objects in 3D space. In this figure, the woman will hear the description “A baby elephant is drinking milk from …” when turning her head to the right. If turning her head to the left, she will hear the description “The keeper is feeding the baby elephant.">
+          <img src="assets/images/object_AD.gif" style="width:100%; height: 100%; margin-top: 10px;" alt="This figure demonstrates the mobile prototype. Using a headphone and a smartphone, BVI users, the woman in this picture, can acquire the object descriptions by orienting themselves to the anchored objects in 3D space. In this figure, the woman will hear the description “A baby elephant is drinking milk from …” when turning her head to the right. If turning her head to the left, she will hear the description “The keeper is feeding the baby elephant.">
         </div>
 
 
