update robin's photo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="authorship">
-              <img class="author_heaed" src="assets/images/bingyu.png" alt="Avatar" style="width:100px; height:100px; border-radius: 50%; object-fit: cover;">
+              <img class="author_heaed" src="assets/images/binyu.jpeg" alt="Avatar" style="width:100px; height:100px; border-radius: 50%; object-fit: cover;">
               <br><span style="margin: auto; font-weight: 700;"><a href="https://graphics.cmlab.csie.ntu.edu.tw/~robin/" target="_blank">Bing-Yu Chen</a> </span>
               <br><span style="margin: auto;">National Taiwan University</span>
             </div>
